[package]
name = "rustchain"
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.rustchain]
opt-level = 2
debug = 0

[dependencies]
dinvoke = { path = "dinvoke"}
data = { path = "data"}
bindings = { path = "bindings"}
litcrypt = "0.3"

[build-dependencies]
cc = "*"
